force-app/main/default/objects/Form_Template__c/Form_Template__c.object-meta.xml
<CustomObject>
    <description>Dynamic form template. Holds the logical JSON schema produced by Vision scan / AI edit.</description>
    <label>Form Template</label>
    <pluralLabel>Form Templates</pluralLabel>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>