force-app/main/default/objects/Form_Template__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>portrait</fullName><default>true</default><label>Portrait</label></value>
            <value><fullName>landscape</fullName><default>false</default><label>Landscape</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>