force-app/main/default/objects/Form_Template__c/fields/Paper_Size__c.field-meta.xml
<CustomField>
    <fullName>Paper_Size__c</fullName>
    <label>Paper Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>A4</fullName><default>true</default><label>A4</label></value>
            <value><fullName>Letter</fullName><default>false</default><label>Letter</label></value>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>