force-app/main/default/objects/Form_Template__c/fields/Scan_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Scan_Job_Id__c</fullName>
    <label>Scan Job Id</label>
    <description>Correlation id for async Vision scan callback from n8n.</description>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>