force-app/main/default/objects/Form_Template__c/fields/Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>Schema_JSON__c</fullName>
    <label>Schema JSON</label>
    <description>Logical form schema (section/row/field, 12-col grid). MVP: Long Text Area, 131072 cap.</description>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>