force-app/main/default/objects/Form_Template__c/fields/Source_File_CV_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_File_CV_Id__c</fullName>
    <label>Source File ContentVersion Id</label>
    <description>ContentVersion Id of the uploaded template (PDF/JPEG/PNG) that was scanned.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>