force-app/main/default/objects/Form_Template__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <label>Template Version</label>
    <description>Content version, incremented on each publish. Distinct from schemaVersion (format).</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <required>true</required>
</CustomField>